--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>spring-config</servlet-name>
-        <servlet-mapping>/</servlet-mapping>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
