unsuccessful attempts to make java configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,15 +12,17 @@
 ##entitymanager.packages.to.scan=com.javacodegeeks
 # _____________________________________
 
-server.port = 9999
+# проба конфигурации взята из fisher-place
+#server.port = 9999
 
-db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/postgres
-db.username=postgres
-db.password=jezhgogo1
-
-#Hibernate Configuration:
-db.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-db.hibernate.show_sql=true
-db.entitymanager.packages.to.scan=ua.com.place.fisher.entity
-db.hibernate.hbm2ddl.auto = update
+#db.driver=org.postgresql.Driver
+#db.url=jdbc:postgresql://localhost:5432/postgres
+#db.username=postgres
+#db.password=jezhgogo1
+#
+##Hibernate Configuration:
+#db.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+#db.hibernate.show_sql=true
+#db.entitymanager.packages.to.scan=ua.com.place.fisher.entity
+#db.hibernate.hbm2ddl.auto = update
+#_____________________________________________
