--- a/pom.xml
+++ b/pom.xml
@@ -184,10 +184,10 @@
             <!--<groupId>org.apache.tomcat.maven</groupId>-->
             <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
             <!--<version>2.2</version>-->
-            <!--<configuration>-->
+            <configuration_does_not_worktion>-->
             <!--<port>9999</port>-->
             <!--&lt;!&ndash;<staticContextPath>/jezh</staticContextPath>&ndash;&gt;-->
-            <!--</configuration>-->
+            <!configuration_does_not_worktion>-->
             <!--</plugin>-->
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
