--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,15 @@
 
     <display-name>Archetype Created Web Application</display-name>
 
+    <!-- выносить параметры конфигуратора sprconfig_does_not_worknfig (это contextConfigLocation и contextClass) в <context-param>,
+    иначе не работает-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring/spring-config-servlet.xml</param-value>
+    </context-param>
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -18,9 +24,14 @@
     <servlet>
         <servlet-name>spring-config</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        //https://stackoverflow.com/questions/22315672/how-to-configure-spring-mvc-with-pure-java-based-configuration
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value></param-value>
+        </init-param>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value></param-value>
+            <param-value>/WEB-INF/spring/spring-config-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
